Bambu/force-app/main/default/objects/Account/fields/AboutInvestment__c.field-meta.xml
<CustomField>
    <fullName>AboutInvestment__c</fullName>
    <label>AboutInvestment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>