Bambu/force-app/main/default/objects/Account/fields/AboutOtherFinancialInstitutions__c.field-meta.xml
<CustomField>
    <fullName>AboutOtherFinancialInstitutions__c</fullName>
    <label>AboutOtherFinancialInstitutions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>