Bambu/force-app/main/default/objects/Account/fields/AboutParentBank__c.field-meta.xml
<CustomField>
    <fullName>AboutParentBank__c</fullName>
    <label>AboutParentBank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>