Bambu/force-app/main/default/objects/Account/fields/AboutPotentialEarnings__c.field-meta.xml
<CustomField>
    <fullName>AboutPotentialEarnings__c</fullName>
    <label>AboutPotentialEarnings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>