Bambu/force-app/main/default/objects/Account/fields/AboutRiskParameters__c.field-meta.xml
<CustomField>
    <fullName>AboutRiskParameters__c</fullName>
    <label>AboutRiskParameters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>