Bambu/force-app/main/default/objects/Account/fields/AboutSaving__c.field-meta.xml
<CustomField>
    <fullName>AboutSaving__c</fullName>
    <label>AboutSaving</label>
    <length>255</length>
    <type>Text</type>
</CustomField>