Bambu/force-app/main/default/objects/Account/fields/AspirationsToRealizationIndex__c.field-meta.xml
<CustomField>
    <fullName>AspirationsToRealizationIndex__c</fullName>
    <label>AspirationsToRealizationIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>