Bambu/force-app/main/default/objects/Account/fields/AverageMonthlySavingsIndex__c.field-meta.xml
<CustomField>
    <fullName>AverageMonthlySavingsIndex__c</fullName>
    <label>AverageMonthlySavingsIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>