Bambu/force-app/main/default/objects/Account/fields/Beliefs__c.field-meta.xml
<CustomField>
    <fullName>Beliefs__c</fullName>
    <label>Beliefs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>