Bambu/force-app/main/default/objects/Account/fields/BorrowingIndexScore__c.field-meta.xml
<CustomField>
    <fullName>BorrowingIndexScore__c</fullName>
    <label>BorrowingIndexScore</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>