Bambu/force-app/main/default/objects/Account/fields/CIF__c.field-meta.xml
<CustomField>
    <fullName>CIF__c</fullName>
    <externalId>true</externalId>
    <label>CIF</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>