Bambu/force-app/main/default/objects/Account/fields/CognitiveLoadFinancialStressIndex__c.field-meta.xml
<CustomField>
    <fullName>CognitiveLoadFinancialStressIndex__c</fullName>
    <label>CognitiveLoadFinancialStressIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>