Bambu/force-app/main/default/objects/Account/fields/CreditCardUsageIndex__c.field-meta.xml
<CustomField>
    <fullName>CreditCardUsageIndex__c</fullName>
    <label>CreditCardUsageIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>