Bambu/force-app/main/default/objects/Account/fields/CreditProfile__c.field-meta.xml
<CustomField>
    <fullName>CreditProfile__c</fullName>
    <label>CreditProfile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>