Bambu/force-app/main/default/objects/Account/fields/CurrentAssets__c.field-meta.xml
<CustomField>
    <fullName>CurrentAssets__c</fullName>
    <label>CurrentAssets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>