Bambu/force-app/main/default/objects/Account/fields/CurrentLiabilitiesShortTerm__c.field-meta.xml
<CustomField>
    <fullName>CurrentLiabilitiesShortTerm__c</fullName>
    <label>CurrentLiabilitiesShortTerm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>