Bambu/force-app/main/default/objects/Account/fields/CustomerMiddlewareUUID__c.field-meta.xml
<CustomField>
    <fullName>CustomerMiddlewareUUID__c</fullName>
    <externalId>true</externalId>
    <label>MiddlewareUUID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>