Bambu/force-app/main/default/objects/Account/fields/DebtFrequencyIndex__c.field-meta.xml
<CustomField>
    <fullName>DebtFrequencyIndex__c</fullName>
    <label>DebtFrequencyIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>