Bambu/force-app/main/default/objects/Account/fields/DebtLoadIndex__c.field-meta.xml
<CustomField>
    <fullName>DebtLoadIndex__c</fullName>
    <label>DebtLoadIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>