Bambu/force-app/main/default/objects/Account/fields/DebtToIncomeRatio__c.field-meta.xml
<CustomField>
    <fullName>DebtToIncomeRatio__c</fullName>
    <label>DebtToIncomeRatio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>