Bambu/force-app/main/default/objects/Account/fields/DelibarateSavingsIndex__c.field-meta.xml
<CustomField>
    <fullName>DelibarateSavingsIndex__c</fullName>
    <label>DelibarateSavingsIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>