Bambu/force-app/main/default/objects/Account/fields/Desires__c.field-meta.xml
<CustomField>
    <fullName>Desires__c</fullName>
    <label>Desires</label>
    <length>255</length>
    <type>Text</type>
</CustomField>