Bambu/force-app/main/default/objects/Account/fields/DocumentIDLastFourDigits__c.field-meta.xml
<CustomField>
    <fullName>DocumentIDLastFourDigits__c</fullName>
    <label>Document ID (Last Four Digits)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>