Bambu/force-app/main/default/objects/Account/fields/EarningPotentialIndex__c.field-meta.xml
<CustomField>
    <fullName>EarningPotentialIndex__c</fullName>
    <label>EarningPotentialIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>