Bambu/force-app/main/default/objects/Account/fields/EducationPlanningIndex__c.field-meta.xml
<CustomField>
    <fullName>EducationPlanningIndex__c</fullName>
    <label>EducationPlanningIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>