Bambu/force-app/main/default/objects/Account/fields/EIRatio__c.field-meta.xml
<CustomField>
    <fullName>EIRatio__c</fullName>
    <label>EIRatio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>