Bambu/force-app/main/default/objects/Account/fields/EmailVerifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>EmailVerifiedDateTime__c</fullName>
    <label>Email Verified Date/Time</label>
    <type>DateTime</type>
</CustomField>