Bambu/force-app/main/default/objects/Account/fields/EmergencyFundIndex__c.field-meta.xml
<CustomField>
    <fullName>EmergencyFundIndex__c</fullName>
    <label>EmergencyFundIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>