Bambu/force-app/main/default/objects/Account/fields/ExistingLoans__c.field-meta.xml
<CustomField>
    <fullName>ExistingLoans__c</fullName>
    <label>ExistingLoans</label>
    <length>255</length>
    <type>Text</type>
</CustomField>