Bambu/force-app/main/default/objects/Account/fields/FinancialLiteracyIndex__c.field-meta.xml
<CustomField>
    <fullName>FinancialLiteracyIndex__c</fullName>
    <label>FinancialLiteracyIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>