Bambu/force-app/main/default/objects/Account/fields/FinServ__HouseholdPolicies__c.field-meta.xml
<CustomField>
    <fullName>FinServ__HouseholdPolicies__c</fullName>
    <description>The total number of policies currently owned by the policyholder&#39;s primary household.</description>
    <inlineHelpText>This is the count of the policies owned by the members in the household. For example, if the Rachel Adam&#39;s primary household has three members, including Rachel, and each of them owns two policies, this field will show a value of 6.</inlineHelpText>
    <label>Household Policies</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>