Bambu/force-app/main/default/objects/Account/fields/FISCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>FISCustomerNumber__c</fullName>
    <externalId>true</externalId>
    <label>FIS Customer Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>