Bambu/force-app/main/default/objects/Account/fields/FixedAssets__c.field-meta.xml
<CustomField>
    <fullName>FixedAssets__c</fullName>
    <label>FixedAssets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>