Bambu/force-app/main/default/objects/Account/fields/GeneralSavingTendencyIndex__c.field-meta.xml
<CustomField>
    <fullName>GeneralSavingTendencyIndex__c</fullName>
    <label>GeneralSavingTendencyIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>