Bambu/force-app/main/default/objects/Account/fields/HabitPattern__c.field-meta.xml
<CustomField>
    <fullName>HabitPattern__c</fullName>
    <label>HabitPattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>