Bambu/force-app/main/default/objects/Account/fields/HealthAilmentsPlanningIndex__c.field-meta.xml
<CustomField>
    <fullName>HealthAilmentsPlanningIndex__c</fullName>
    <label>HealthAilmentsPlanningIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>