Bambu/force-app/main/default/objects/Account/fields/IDExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>IDExpirationDate__c</fullName>
    <label>ID Expiration Date</label>
    <type>Date</type>
</CustomField>