Bambu/force-app/main/default/objects/Account/fields/IDIssueDate__c.field-meta.xml
<CustomField>
    <fullName>IDIssueDate__c</fullName>
    <label>ID Issue Date</label>
    <type>Date</type>
</CustomField>