Bambu/force-app/main/default/objects/Account/fields/IDIssuedby__c.field-meta.xml
<CustomField>
    <fullName>IDIssuedby__c</fullName>
    <label>ID Issued by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>