Bambu/force-app/main/default/objects/Account/fields/IDIssuedLocation__c.field-meta.xml
<CustomField>
    <fullName>IDIssuedLocation__c</fullName>
    <label>ID Issued Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>