Bambu/force-app/main/default/objects/Account/fields/IDNumber__c.field-meta.xml
<CustomField>
    <fullName>IDNumber__c</fullName>
    <label>ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>