Bambu/force-app/main/default/objects/Account/fields/IDType__c.field-meta.xml
<CustomField>
    <fullName>IDType__c</fullName>
    <label>ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DL</fullName>
            </value>
            <value>
                <fullName>State ID</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>