Bambu/force-app/main/default/objects/Account/fields/ImpulsiveSpendingIndex__c.field-meta.xml
<CustomField>
    <fullName>ImpulsiveSpendingIndex__c</fullName>
    <label>ImpulsiveSpendingIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>