Bambu/force-app/main/default/objects/Account/fields/IncomeAdequatenessIndex__c.field-meta.xml
<CustomField>
    <fullName>IncomeAdequatenessIndex__c</fullName>
    <label>IncomeAdequatenessIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>