Bambu/force-app/main/default/objects/Account/fields/Influencers__c.field-meta.xml
<CustomField>
    <fullName>Influencers__c</fullName>
    <label>Influencers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>