Bambu/force-app/main/default/objects/Account/fields/InsurancePlanningIndex__c.field-meta.xml
<CustomField>
    <fullName>InsurancePlanningIndex__c</fullName>
    <label>InsurancePlanningIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>