Bambu/force-app/main/default/objects/Account/fields/Intentions__c.field-meta.xml
<CustomField>
    <fullName>Intentions__c</fullName>
    <label>Intentions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>