Bambu/force-app/main/default/objects/Account/fields/InvestmentIndex__c.field-meta.xml
<CustomField>
    <fullName>InvestmentIndex__c</fullName>
    <label>InvestmentIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>