Bambu/force-app/main/default/objects/Account/fields/InvestmentPlanningIndex__c.field-meta.xml
<CustomField>
    <fullName>InvestmentPlanningIndex__c</fullName>
    <label>InvestmentPlanningIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>