Bambu/force-app/main/default/objects/Account/fields/LastDateTimeCalledBambuService__c.field-meta.xml
<CustomField>
    <fullName>LastDateTimeCalledBambuService__c</fullName>
    <label>Last Date/Time Called Bambu Service</label>
    <type>DateTime</type>
</CustomField>