Bambu/force-app/main/default/objects/Account/fields/LastDateTimeTextedBambuService__c.field-meta.xml
<CustomField>
    <fullName>LastDateTimeTextedBambuService__c</fullName>
    <label>Last Date/Time Texted Bambu Service</label>
    <type>DateTime</type>
</CustomField>