Bambu/force-app/main/default/objects/Account/fields/LifeEvents__c.field-meta.xml
<CustomField>
    <fullName>LifeEvents__c</fullName>
    <label>LifeEvents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>