Bambu/force-app/main/default/objects/Account/fields/LongTermGoals__c.field-meta.xml
<CustomField>
    <fullName>LongTermGoals__c</fullName>
    <label>LongTermGoals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>