Bambu/force-app/main/default/objects/Account/fields/LongTermSavingsIndex__c.field-meta.xml
<CustomField>
    <fullName>LongTermSavingsIndex__c</fullName>
    <label>LongTermSavingsIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>