Bambu/force-app/main/default/objects/Account/fields/MailingAddressVerified__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressVerified__c</fullName>
    <label>Mailing Address Verified?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>