Bambu/force-app/main/default/objects/Account/fields/MailingAddressVerifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>MailingAddressVerifiedDateTime__c</fullName>
    <label>Mailing Address Verified Date/Time</label>
    <type>DateTime</type>
</CustomField>