Bambu/force-app/main/default/objects/Account/fields/MiscellaneousMonthlyExpIndex__c.field-meta.xml
<CustomField>
    <fullName>MiscellaneousMonthlyExpIndex__c</fullName>
    <label>MiscellaneousMonthlyExpIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>