Bambu/force-app/main/default/objects/Account/fields/MobileNotificationsOptOut__c.field-meta.xml
<CustomField>
    <fullName>MobileNotificationsOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile Notifications Opt-out</label>
    <type>Checkbox</type>
</CustomField>