Bambu/force-app/main/default/objects/Account/fields/MobileVerified__c.field-meta.xml
<CustomField>
    <fullName>MobileVerified__c</fullName>
    <label>Mobile Verified?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>