Bambu/force-app/main/default/objects/Account/fields/MobileVerifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>MobileVerifiedDateTime__c</fullName>
    <label>Mobile Verified Date/Time</label>
    <type>DateTime</type>
</CustomField>