Bambu/force-app/main/default/objects/Account/fields/MonthlyBillPaymentIndexFull__c.field-meta.xml
<CustomField>
    <fullName>MonthlyBillPaymentIndexFull__c</fullName>
    <label>MonthlyBillPaymentIndexFull</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>