Bambu/force-app/main/default/objects/Account/fields/MonthlyBillPaymentIndexTime__c.field-meta.xml
<CustomField>
    <fullName>MonthlyBillPaymentIndexTime__c</fullName>
    <label>MonthlyBillPaymentIndexTime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>