Bambu/force-app/main/default/objects/Account/fields/MonthlyloanRepaymentFullIndex__c.field-meta.xml
<CustomField>
    <fullName>MonthlyloanRepaymentFullIndex__c</fullName>
    <label>MonthlyloanRepaymentFullIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>