Bambu/force-app/main/default/objects/Account/fields/MonthlyLoanRepaymentOnTimeIndex__c.field-meta.xml
<CustomField>
    <fullName>MonthlyLoanRepaymentOnTimeIndex__c</fullName>
    <label>MonthlyLoanRepaymentOnTimeIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>