Bambu/force-app/main/default/objects/Account/fields/MostSpentOnCategories__c.field-meta.xml
<CustomField>
    <fullName>MostSpentOnCategories__c</fullName>
    <label>MostSpentOnCategories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>