Bambu/force-app/main/default/objects/Account/fields/MostSpentOnMerchants__c.field-meta.xml
<CustomField>
    <fullName>MostSpentOnMerchants__c</fullName>
    <label>MostSpentOnMerchants</label>
    <length>255</length>
    <type>Text</type>
</CustomField>