Bambu/force-app/main/default/objects/Account/fields/NeedForAdditionalIncome__c.field-meta.xml
<CustomField>
    <fullName>NeedForAdditionalIncome__c</fullName>
    <label>NeedForAdditionalIncome</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>