Bambu/force-app/main/default/objects/Account/fields/NonCurrentLiabilitiesLongTerm__c.field-meta.xml
<CustomField>
    <fullName>NonCurrentLiabilitiesLongTerm__c</fullName>
    <label>NonCurrentLiabilitiesLongTerm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>