Bambu/force-app/main/default/objects/Account/fields/OtherAddressVerifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>OtherAddressVerifiedDateTime__c</fullName>
    <label>Other Address Verified Date/Time</label>
    <type>DateTime</type>
</CustomField>