Bambu/force-app/main/default/objects/Account/fields/PlanningIndexScore__c.field-meta.xml
<CustomField>
    <fullName>PlanningIndexScore__c</fullName>
    <label>PlanningIndexScore</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>