Bambu/force-app/main/default/objects/Account/fields/PrimaryIncomeToAdditionalIncomeRatio__c.field-meta.xml
<CustomField>
    <fullName>PrimaryIncomeToAdditionalIncomeRatio__c</fullName>
    <label>PrimaryIncomeToAdditionalIncomeRatio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>