Bambu/force-app/main/default/objects/Account/fields/ProductAppropriatenessIndex__c.field-meta.xml
<CustomField>
    <fullName>ProductAppropriatenessIndex__c</fullName>
    <label>ProductAppropriatenessIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>