Bambu/force-app/main/default/objects/Account/fields/RecurringPeriodicExpIndex__c.field-meta.xml
<CustomField>
    <fullName>RecurringPeriodicExpIndex__c</fullName>
    <label>RecurringPeriodicExpIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>