Bambu/force-app/main/default/objects/Account/fields/RefinancedElligibleLoans__c.field-meta.xml
<CustomField>
    <fullName>RefinancedElligibleLoans__c</fullName>
    <label>RefinancedElligibleLoans</label>
    <length>255</length>
    <type>Text</type>
</CustomField>