Bambu/force-app/main/default/objects/Account/fields/RelativeIncomeIndexGlobal__c.field-meta.xml
<CustomField>
    <fullName>RelativeIncomeIndexGlobal__c</fullName>
    <label>RelativeIncomeIndexGlobal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>