Bambu/force-app/main/default/objects/Account/fields/RetirementPlanningIndex__c.field-meta.xml
<CustomField>
    <fullName>RetirementPlanningIndex__c</fullName>
    <label>RetirementPlanningIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>