Bambu/force-app/main/default/objects/Account/fields/Riskindex__c.field-meta.xml
<CustomField>
    <fullName>Riskindex__c</fullName>
    <label>Riskindex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>