Bambu/force-app/main/default/objects/Account/fields/SavingIndexScore__c.field-meta.xml
<CustomField>
    <fullName>SavingIndexScore__c</fullName>
    <label>SavingIndexScore</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>