Bambu/force-app/main/default/objects/Account/fields/SavingTendencyForLargeExpIndex__c.field-meta.xml
<CustomField>
    <fullName>SavingTendencyForLargeExpIndex__c</fullName>
    <label>SavingTendencyForLargeExpIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>