Bambu/force-app/main/default/objects/Account/fields/ShortTermGoals__c.field-meta.xml
<CustomField>
    <fullName>ShortTermGoals__c</fullName>
    <label>ShortTermGoals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>