Bambu/force-app/main/default/objects/Account/fields/SpendingIndexScore__c.field-meta.xml
<CustomField>
    <fullName>SpendingIndexScore__c</fullName>
    <label>SpendingIndexScore</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>