Bambu/force-app/main/default/objects/Account/fields/SpurOfTheMomentexpIndex__c.field-meta.xml
<CustomField>
    <fullName>SpurOfTheMomentexpIndex__c</fullName>
    <label>SpurOfTheMomentexpIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>