Bambu/force-app/main/default/objects/Account/fields/TaxesPlanningIndex__c.field-meta.xml
<CustomField>
    <fullName>TaxesPlanningIndex__c</fullName>
    <label>TaxesPlanningIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>