Bambu/force-app/main/default/objects/Account/fields/TotalEarningIndexScore__c.field-meta.xml
<CustomField>
    <fullName>TotalEarningIndexScore__c</fullName>
    <label>TotalEarningIndexScore</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>