Bambu/force-app/main/default/objects/Account/fields/TotalLiquidSavingsIndex__c.field-meta.xml
<CustomField>
    <fullName>TotalLiquidSavingsIndex__c</fullName>
    <label>TotalLiquidSavingsIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>