Bambu/force-app/main/default/objects/Account/fields/UnexpectedExpensesIndex__c.field-meta.xml
<CustomField>
    <fullName>UnexpectedExpensesIndex__c</fullName>
    <label>UnexpectedExpensesIndex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>