Bambu/force-app/main/default/objects/Account/fields/UnnecessaryVSNecessaryExpRatio__c.field-meta.xml
<CustomField>
    <fullName>UnnecessaryVSNecessaryExpRatio__c</fullName>
    <label>UnnecessaryVSNecessaryExpRatio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>