Bambu/force-app/main/default/objects/Account/recordTypes/FinServ__IndustriesBusiness.recordType-meta.xml
<RecordType>
    <fullName>FinServ__IndustriesBusiness</fullName>
    <active>true</active>
    <description>A business or an organization</description>
    <label>Business</label>
</RecordType>