Bambu/force-app/main/default/objects/Account/recordTypes/NonClient_Account.recordType-meta.xml
<RecordType>
    <fullName>NonClient_Account</fullName>
    <active>true</active>
    <description>Use this to create an Account record other than Client.</description>
    <label>Non-Client Account</label>
</RecordType>